--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "learning-managment-system": {
@@ -94,7 +94,9 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": ["../node_modules/bootstrap/dist/js/bootstrap.js"]
+            "scripts": [
+              "../node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           }
         },
         "lint": {
@@ -123,6 +125,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "learning-managment-system"
+    }
+  },
+  "defaultProject": "learning-managment-system",
+  "cli": {
+    "analytics": false
+  }
 }
